# gimle-hugin

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  LICENSE  README.md  mypy.ini  pyproject.toml  setup.cfg
.github/workflows/: auto_bump_patch.yml  ci.yml  release.yml
apps/: README.md
apps/baby_hugin/: README.md  run.py
apps/data_analyst/: README.md  run.py
apps/financial_newspaper/: README.md  run.py
apps/rap_machine/: README.md  dashboard.py  run.py
apps/the_hugins/: README.md  run.py  world_server.py
docs/: eleventy.config.js  package-lock.json  package.json
docs/src/: cli.md  getting-started.md  index.md
examples/: README.md
examples/agent_messaging/: README.md
examples/artifact_feedback/: README.md
examples/artifacts/: README.md
examples/basic_agent/: README.md
examples/branching/: README.md
examples/custom_artifacts/: README.md
examples/heartbeat/: README.md
examples/human_interaction/: README.md
examples/parallel_agents/: README.md
examples/plan_execute_agent/: README.md
examples/reflexion/: README.md
examples/self_reflection/: README.md
examples/shared_state/: README.md
examples/simple_branching/: README.md
examples/sub_agent/: README.md
examples/task_chaining/: README.md
examples/task_sequences/: README.md
examples/tool_chaining/: README.md
src/gimle/: __init__.py
tasks/: 003-long-term-memory.md  004-orchestration-scripts.md  006-parallel-tool-calls.md  011-track-config-changes.md
tests/: conftest.py  memory_storage.py  mock_dependencies.py  test_agent.py  test_agent_builder_generate_config.py  test_agent_builder_generate_task_schema.py  test_agent_builder_test_agent.py  test_agent_call.py  test_artifact_feedback.py  test_artifacts.py  test_artifacts_example.py  test_branching_example.py  test_completion.py  test_complex_session_loading.py  test_deterministic_control_flow.py  test_environment.py  test_filesystem_tools.py  test_finish_tool.py  test_heartbeat_example.py  test_human_rating.py  test_integration.py  test_interaction.py  test_llm_call.py  test_model.py  test_model_registry.py  test_monitor_agents_jsonable.py  test_ollama_models.py  test_prompt.py  test_run_agent_parameters.py  test_session.py  test_session_state.py  test_stack.py  test_storage.py  test_tangent_exploration_example.py  test_task.py  test_terrain_consequences.py  test_text_artifact.py  test_tool.py  test_waiting.py
(+561 files in other folders)
