[project]
name = "gimle-hugin"
dynamic = ["version"]
description = "Hugin - An agentic framework for creative reasoning tasks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{name = "gimlelabs", email = "noreply@github.com"}]
keywords = ["agents", "agentic-framework", "llm", "ai", "anthropic"]
dependencies = [
    "anthropic>=0.72.0",
    "jinja2>=3.1.6",
    "markdown>=3.7.0",
    "ollama>=0.6.1",
    "openai>=1.0.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.urls]
Homepage = "https://hugin.gimlelabs.com"
Documentation = "https://hugin.gimlelabs.com"
Repository = "https://github.com/gimlelabs/gimle-hugin"
"Bug Tracker" = "https://github.com/gimlelabs/gimle-hugin/issues"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
]
apps = [
    "matplotlib>=3.8.0",
    "scipy>=1.11.0",
]
examples = [
    "seaborn>=0.13.0",
    "yfinance>=0.2.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "src/gimle/hugin/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/gimle"]
artifacts = [
    "*.yaml",
    "*.md",
]

[tool.black]
line-length = 80
target-version = ["py312"]
extend-exclude = "_version.py"

[tool.isort]
profile = "black"
line_length = 80
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
extend_skip = ["_version.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

[dependency-groups]
dev = [
    "black>=24.0.0",
    "flake8>=7.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]

[project.scripts]
hugin = "gimle.hugin.cli.cli:main"
